<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:visible="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:visible="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_logout"
            android:visible="true"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_register"
            android:visible="true"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_createVote"
            android:visible="true"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_createVote" />
        <item
            android:id="@+id/nav_myVote"
            android:visible="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_myVote" />

    </group>
</menu>