<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.raon.wcombine.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.raon.wcombine.ui.home.HomeFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.raon.wcombine.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.raon.wcombine.ui.createvote.CreateVoteFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_createVote"
        android:name="com.raon.wcombine.ui.logout.LogoutFragment"
        android:label="@string/menu_createVote"
        tools:layout="@layout/fragment_createvote" />

    <fragment
        android:id="@+id/nav_myVote"
        android:name="com.raon.wcombine.ui.createvote.CreateVoteFragment"
        android:label="@string/menu_myVote"
        tools:layout="@layout/fragment_myvote" />
</navigation>